# roshar

./: .gitignore  Cargo.toml  LICENSE  release.toml
roshar-bt/: Cargo.toml  README.md
roshar-bt/benches/: backtest_performance.rs
roshar-bt/src/: chart.rs  lib.rs  performance.rs  source.rs  types.rs
roshar-bt/src/exchanges/: bybit.rs  hyperliquid.rs  kraken.rs  mod.rs
roshar-bt/src/l1/: backtest.rs  exchange.rs  mod.rs  orderbook.rs
roshar-bt/src/l2/: backtest.rs  exchange.rs  fill.rs  manager.rs  mod.rs  orderbook.rs
roshar-clients/: Cargo.toml
roshar-clients/src/: constants.rs  lib.rs  state_handle.rs  state_manager.rs
roshar-clients/src/binance/: mod.rs
roshar-clients/src/binance/rest/: client.rs  mod.rs
roshar-clients/src/binance/ws/: candle_feed.rs  market_data_feed.rs  mod.rs
roshar-clients/src/bybit/: mod.rs
roshar-clients/src/bybit/rest/: auth.rs  market.rs  mod.rs  order_management.rs
roshar-clients/src/bybit/ws/: candle_feed.rs  market_data_feed.rs  mod.rs
roshar-clients/src/hyperliquid/: mod.rs  validator.rs
roshar-clients/src/hyperliquid/rest/: exchange.rs  info.rs  metadata.rs  mod.rs
roshar-clients/src/hyperliquid/ws/: bbo_feed.rs  candle_feed.rs  fills_feed.rs  market_data_feed.rs  mod.rs  orders_feed.rs
roshar-clients/src/kraken/: mod.rs
roshar-clients/src/kraken/rest/: auth.rs  charts.rs  market.rs  mod.rs  multi_collateral.rs  order_management.rs
roshar-clients/src/kraken/ws/: market_data_feed.rs
roshar-clients/src/polymarket/rest/: gamma.rs
roshar-clients/tests/: exchange_market_data_test.rs  market_data_feed_test.rs
roshar-types/: CLAUDE.md  Cargo.toml
roshar-types/src/: common.rs  http.rs  lib.rs  orderbook.rs  websocket_supported_exchanges.rs
roshar-types/src/binance/: mod.rs  ws.rs
roshar-types/src/bybit/: ws.rs
roshar-types/src/exchanges/: bybitspot.rs  krakenspot.rs  mex.rs  mod.rs
roshar-types/src/exchanges/binance/: data.rs  market_data.rs  mod.rs  ws.rs
roshar-types/src/exchanges/bybit/: data.rs  market.rs  mod.rs  order_management.rs
roshar-types/src/exchanges/hyperliquid/: data.rs  exchange.rs  info.rs  mod.rs
roshar-types/src/exchanges/kraken/: auth.rs  charts.rs  data.rs  market.rs  mod.rs  multi_collateral.rs  order_management.rs  ws.rs
roshar-types/src/hyperliquid/: info.rs  mod.rs  ws.rs
roshar-types/src/kraken/: mod.rs  ws.rs
roshar-types/src/polymarket/: gamma.rs  mod.rs
roshar-ws/: Cargo.toml
roshar-ws-mgr/: CLAUDE.md  Cargo.toml
roshar-ws-mgr/src/: config.rs  connection.rs  lib.rs  manager.rs
roshar-ws-mgr/src/handlers/: config.rs  connection_event_handler.rs  connection_handlers.rs  exchange_subscription_manager.rs  mod.rs  read_timeout_handler.rs
roshar-ws/src/: client.rs  error.rs  frame.rs  handshake.rs  lib.rs  reader.rs  writer.rs
roshar-ws/tests/: binance_test.rs
