[workspace]
members = [
    "roshar-ws",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Calum Russell <calumrussell@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["net", "io-util", "sync"] }
tokio-uring = "0.3"
bytes = "1.5"
thiserror = "1.0"
futures = "0.3"

