[workspace]
members = [
    "roshar-ws",
    "roshar-ws-mgr",
    "roshar-bt",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Calum Russell"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["net", "io-util", "sync"] }
tokio-uring = "0.3"
bytes = "1.5"
thiserror = "1.0"
futures = "0.3"

