[workspace]
members = [
    "roshar-ws",
    "roshar-ws-mgr",
    "roshar-bt",
    "roshar-types",
    "roshar-clients",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Calum Russell"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["net", "io-util", "sync"] }
tokio-uring = "0.3"
bytes = "1.5"
thiserror = "1.0"
futures = "0.3"
anyhow = "1.0"
log = "0.4"
rust_decimal = "1.36"
serde_json = "1.0"
env_logger = "0.11"
roshar-types = { path = "roshar-types" }
roshar-ws-mgr = { path = "roshar-ws-mgr" }

