[package]
name = "roshar-bt"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Backtesting framework for trading strategies"
repository = "https://github.com/calumrussell/roshar"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4"
thiserror = "2.0.11"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full", "rt"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
rust_decimal = { version = "1.37.1", features = ["macros", "maths"] }
flate2 = "1.0"
object_store = { version = "0.9", features = ["aws"] }
futures = "0.3"
url = "2.5"
bytes = "1"
async-trait = "0.1"
plotters = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "backtest_performance"
harness = false
