[package]
name = "roshar-clients"
version = "0.1.2-rc.2"
edition = "2021"
license = "MIT"
description = "Exchange client implementations for Roshar"
repository = "https://github.com/calumrussell/roshar"

[dependencies]
anyhow = "1.0"
log = "0.4"
tokio = { version = "1", features = ["net", "io-util", "sync"] }
thiserror = "1.0"
roshar-types = { version = "0.1.3", path = "../roshar-types" }
rust_decimal = "1.36"
roshar-ws-mgr = { version = "0.1.2", path = "../roshar-ws-mgr" }
serde_json = "1.0"
chrono = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Hyperliquid SDK and crypto dependencies
hyperliquid_rust_sdk = "0.6.0"
ethers = "2.0"
sha3 = "0.10"
hex = "0.4"
rmp-serde = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"

# Crypto for auth (ByBit, Kraken)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
