[package]
name = "roshar-types"
version = "0.1.0"
edition = "2021"

[features]
default = []
clickhouse = ["dep:clickhouse"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "1.0"
clickhouse = { version = "0.13", optional = true }
ordered-float = "4.2"
compact_str = "0.8"
rust_decimal = "1.35"
