[package]
name = "roshar-ws-mgr"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "WebSocket connection manager with automatic reconnection and heartbeat support"
repository = "https://github.com/calumrussell/roshar"

[lib]
name = "roshar_ws_mgr"
path = "src/lib.rs"

[[bin]]
name = "test-hyperliquid"
path = "src/bin/test-hyperliquid.rs"

[[bin]]
name = "test-deadlock"
path = "src/bin/test_deadlock.rs"

[dependencies]
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { version = "1.45.1", features = ["full"] }
futures-util = { version = "0.3", features = ["std", "sink"] }
tokio-util = "0.7.15"
anyhow = "1.0.95"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"
tokio-test = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dashmap = "6.1"
chrono = "0.4.41"
url = "2.5"
async-trait = "0.1"
roshar-types = { version = "0.1.6", path = "../roshar-types" }
