[package]
name = "roshar-ws"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Low-level WebSocket client library for Rust"
repository = "https://github.com/calumrussell/roshar"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
base64 = { version = "0.21", features = ["default"] }
futures = "0.3"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
rustls-native-certs = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true, optional = true }

[features]
default = []
uring = ["tokio-uring"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "rt-multi-thread", "macros"] }
futures = { workspace = true }
futures-util = "0.3"
url = "2.5"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

